--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,11 @@ version: '3.5'
 
 services:
     app:
-        build: ./app
+        build: .
         container_name: url_shortener
         working_dir: /var/www/html/
-        env_file: .env
         volumes:
-            - ./app:/var/www/html
+            - ./:/var/www/html
             - ./apache.conf:/etc/apache2/sites-enabled/000-default.conf
         ports:
             - 8000:80
