--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /public/bundles/
 /var/
 /vendor/
+/node_modules/
+/public/js/
+/dist/
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
