--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 # Symfony
 APP_ENV=dev
 APP_SECRET=e54668235eefb17b2d5a54ae81c96c7c
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+
+# Client
+VUE_APP_API_URL=http://localhost:8000
