--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "guzzlehttp/guzzle": "^6.3",
         "jms/serializer-bundle": "^2.4",
+        "nelmio/cors-bundle": "^1.5",
         "sentry/sentry": "^1.9",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
